// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewBankCard desktop className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcNewBankCard YpcNewBankCard_view_horizontal Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_new-bank-card YpcIcon_width_xl YpcIcon_height_s YpcNewBankCard-Icon YpcNewBankCard-Icon_view_horizontal"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Добавить карту
    </h4>
  </div>
</article>
`;

exports[`NewBankCard desktop view horizontal 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcNewBankCard YpcNewBankCard_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_new-bank-card YpcIcon_width_xl YpcIcon_height_s YpcNewBankCard-Icon YpcNewBankCard-Icon_view_horizontal"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Добавить карту
    </h4>
  </div>
</article>
`;

exports[`NewBankCard desktop view vertical 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcNewBankCard YpcNewBankCard_view_vertical"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_new-bank-card YpcIcon_width_xl YpcIcon_height_s YpcNewBankCard-Icon YpcNewBankCard-Icon_view_vertical"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Добавить карту
    </h4>
  </div>
</article>
`;

exports[`NewBankCard touch-phone className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcNewBankCard YpcNewBankCard_view_horizontal Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_new-bank-card YpcIcon_width_xl YpcIcon_height_s YpcNewBankCard-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Добавить карту
    </h4>
  </div>
</article>
`;

exports[`NewBankCard touch-phone view horizontal 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcNewBankCard YpcNewBankCard_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_new-bank-card YpcIcon_width_xl YpcIcon_height_s YpcNewBankCard-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Добавить карту
    </h4>
  </div>
</article>
`;

exports[`NewBankCard touch-phone view vertical 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcNewBankCard YpcNewBankCard_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_new-bank-card YpcIcon_width_xl YpcIcon_height_s YpcNewBankCard-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Добавить карту
    </h4>
  </div>
</article>
`;
